<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppB</string>

    <string name="title_test_mode">Test Mode</string>
    <string name="title_operator">select Operator</string>
    <string name="title_email">intput Email</string>
    <string name="skt">SKT</string>
    <string name="kt">KT</string>
    <string name="lgu">LGU+</string>
    
    <string name="save">save</string>
</resources>
