<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.appb.ActivitySetting" >

    <Switch
        android:id="@+id/switchTestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="@string/title_test_mode" />

    <LinearLayout
        android:id="@+id/operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switchTestMode"
        android:layout_below="@+id/switchTestMode"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_operator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <RadioGroup
            android:id="@+id/radioGroupOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/skt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/skt" />

            <RadioButton
                android:id="@+id/kt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kt" />

            <RadioButton
                android:id="@+id/lgu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lgu" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/operator"
        android:layout_below="@+id/operator"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="address@google.com"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp"
        android:onClick="onClickSaveInformation"
        android:text="@string/save" />

</RelativeLayout>